# 7.pyclass

./: README.md  desafio.py  etl.py  main.py  pyproject.toml
